# ml_project

./: .gitignore  app.py  appication.py  pyproject.toml  requirements.txt
artifacts/: model.pkl  model_report.json  preprocessor.pkl
notebook/: eda.ipynb  model_training.ipynb
notebook/catboost_info/: catboost_training.json  time_left.tsv
notebook/catboost_info/learn/: events.out.tfevents
src/: exception.py  logger.py  utils.py
src/components/: data_ingestion.py  data_transform.py  model_training.py
src/pipeline/: predict.py
templates/: home.html  index.html
